--- a/roles/kairos/templates/kairosdb.properties.j2
+++ b/roles/kairos/templates/kairosdb.properties.j2
@@ -25,9 +25,9 @@ kairosdb.jetty.static_web_root=webroot
 #kairosdb.jetty.basic_auth.password=
 
 #===============================================================================
-kairosdb.service.datastore=org.kairosdb.datastore.h2.H2Module
+#kairosdb.service.datastore=org.kairosdb.datastore.h2.H2Module
 kairosdb.datastore.concurrentQueryThreads=5
-#kairosdb.service.datastore=org.kairosdb.datastore.cassandra.CassandraModule
+kairosdb.service.datastore=org.kairosdb.datastore.cassandra.CassandraModule
 #kairosdb.service.datastore=org.kairosdb.datastore.remote.RemoteModule
 
 #this module is built using the code at https://github.com/brianhks/opentsdb
@@ -40,7 +40,7 @@ kairosdb.datastore.h2.database_path=build/h2db
 #===============================================================================
 #Cassandra properties
 #host list is in the form> 1.1.1.1:9160,1.1.1.2:9160
-kairosdb.datastore.cassandra.host_list=localhost:9160
+kairosdb.datastore.cassandra.host_list="{% for host in groups['tag_cassandra_true'] %}{{ hostvars[host]['ansible_eth0']['ipv4']['address'] }}:9160, {% endfor %}"
 kairosdb.datastore.cassandra.replication_factor=1
 kairosdb.datastore.cassandra.write_delay=1000
 kairosdb.datastore.cassandra.write_buffer_max_size=500000
